--- a/app/views/events/_card_event.html.erb
+++ b/app/views/events/_card_event.html.erb
@@ -1,9 +1,13 @@
-<% @events.each do |event| %>
   <div class="card-container">
     <div class="card-global">
       <i class="fas fa-futbol" style="color: #735bbf; font-size: 90px"></i>
       <div class="card-info">
-        <div id="event-title"><%= event.title %></div>
+        <div id="event-title">
+          <%= event.title %>
+          <% if current_user != nil && current_user.teammates.count > 0 %>
+            <%= image_tag "icons/fist_raised.svg", alt: "fist", width: 25, height: 25, id: "fist_raised" %>
+          <% end %>
+        </div>
         <div id="event-creator", style="color: #848383"><%= event.creator.first_name %> <%= event.creator.last_name %></div>
         <div class="card-time">
           <div class="card-elements">
@@ -18,4 +22,3 @@
       </div>
     </div>
   </div>
-<% end %>
