--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,2 +1,5 @@
 
-<%= render 'events/card_event' , event:@events.first %>
+<%= render 'events/card_event', event:@events.first %>
+
+<%= render 'events/footer', event:@events.first %>
+
