--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,25 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+.navbar-index {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 375px;
+  background-color: white;
+    img {
+      width: 35px;
+      height: 35px; 
+  }
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.navbar-avatar {
+  img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-form {
+  width: 200px;
 }
