--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,2 +1,24 @@
+<div class="navbar-index">
+  <%= image_tag("icons/filter") %>
+  <div class="navbar-form">
+    <%= form_tag events_path, method: :get do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Find an event/T-Mate"  %>
+      <% end %>
+  </div>
+  <div class="navbar-avatar">
+    <%= link_to image_tag("avatar/obama"), user_path %>
+  </div>
+</div>
+
+
 
 <%= render 'events/card_event' , event:@events.first %>
+
+
+
+
+
+
