--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,16 +4,18 @@
   justify-content: space-around;
   width: 375px;
   background-color: white;
+  border-bottom: 1px solid #dddddd;
+  margin-bottom: 5px;
     img {
-      width: 35px;
-      height: 35px; 
+      width: 30px;
+      height: 30px; 
   }
 }
 
 .navbar-avatar {
   img {
-    width: 70px;
-    height: 70px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -21,5 +23,6 @@
 }
 
 .navbar-form {
-  width: 200px;
+  width: 240px;
+
 }
