--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,7 +9,12 @@
     </div>
   </div>
 </div>
-<div class="map-placeholder"></div>
+
+<div id="map"
+     style="width: 350px; height: 250px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+
 <h1><%= @event.title %></h1>
 <p class="text-justify"><%= @event.content %></p>
 <hr>
