--- a/app/assets/stylesheets/components/_event_card.scss
+++ b/app/assets/stylesheets/components/_event_card.scss
@@ -45,7 +45,8 @@
 #event-title {
   display: flex;
   justify-content: space-between;
-  font-size: 25px;
+  font-size: 23px;
+  font-weight: bold;
 
   #fist_raised {
     margin-top: 8px;
