--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,38 +1,42 @@
-<div class="p-2 d-flex flex-column align-items-center">
-<div class="d-flex flex-row event-show-header">
-  <%= image_tag "avatar/default.png", class:"avatar-creator" %>
-  <div class="d-flex flex-column">
-    <h2><%= "#{@event.creator.first_name} #{@event.creator.last_name}" %></h2>
-    <div class="d-flex flex-row justify-content-between ">
-      <p><i class="fas fa-calendar-alt"></i> <%= @event.start_time.strftime("%e %B, %Y") %></p>
-      <p><i class="far fa-clock"></i> <%= "#{@event.start_time.strftime("%k:%m")} to #{@event.end_time.strftime("%k:%m")}"%></p>
+<div class="p-2 d-flex flex-column">
+  <div class="d-flex flex-row event-show-header">
+    <%= image_tag "avatar/default.png", class:"avatar-creator" %>
+    <div class="d-flex flex-column">
+      <h3><%= "#{@event.creator.first_name} #{@event.creator.last_name}" %></h2>
+      <div class="d-flex flex-row justify-content-between" id="date-and-time">
+        <p><i class="fas fa-calendar-alt"></i> <%= @event.start_time.strftime("%e %B, %Y") %></p>
+        <p><i class="far fa-clock"></i> <%= "#{@event.start_time.strftime("%k:%m")} to #{@event.end_time.strftime("%k:%m")}"%></p>
+      </div>
     </div>
   </div>
-</div>
-<div class="map-placeholder"></div>
-<h1><%= @event.title %></h1>
-<p class="text-justify"><%= @event.content %></p>
-<hr>
-<h2>Weather Forecast</h2>
-<div class="d-flex flex-row justify-content-around">
-  <p>WEATHER TO INSERT</p>
-  <p>WEATHER TO INSERT</p>
-</div>
-<hr>
-<% if current_user != nil && current_user.teammates.count > 0 %>
-  <h2>T-Mates</h2>
-  <div>
-  <% current_user.teammates.each do |teammate| %>
-    <%= image_tag "avatar/default.png", class:"avatar-teammate" %>
-  <% end %>
+  <div class="map-placeholder"></div>
+  <div id="show-event-title">
+    <h3><%= @event.title %></h3>
+    <p class="text-justify"><%= @event.content %></p>
   </div>
   <hr>
-<% end %>
-<div class="button-event text-center">
-<% if current_user != nil && (@event.users.include? current_user || @event.creator == current_user) %>
-  <a href="#" class="text-center text-reset align-middle">Cancel</a>
-<% else %>
-  <a href="#" class="text-center text-reset align-middle">Attend!</a>
-<% end %>
-</div>
+  <div id="weather-forecast">
+    <h3>Weather Forecast</h3>
+  </div>
+  <div class="d-flex flex-row justify-content-around">
+    <p>WEATHER TO INSERT</p>
+    <p>WEATHER TO INSERT</p>
+  </div>
+  <hr>
+    <% if current_user != nil && current_user.teammates.count > 0 %>
+      <h2>T-Mates</h2>
+      <div>
+      <% current_user.teammates.each do |teammate| %>
+        <%= image_tag "avatar/default.png", class:"avatar-teammate" %>
+      <% end %>
+      </div>
+      <hr>
+    <% end %>
+  <div class="button-event text-center">
+    <% if current_user != nil && (@event.users.include? current_user || @event.creator == current_user) %>
+      <a href="#" class="text-center text-reset align-middle">Cancel</a>
+    <% else %>
+      <a href="#" class="text-center text-reset align-middle">Attend!</a>
+    <% end %>
+  </div>
 </div>
