--- a/app/views/events/_navbar_all_but_index.html.erb
+++ b/app/views/events/_navbar_all_but_index.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-avatar">
     <%= link_to image_tag("avatar/obama"), user_path %>
   </div>
-  <div class="navbar-form">
+  <div class="navbar-form-all-but-index">
     <%= form_tag events_path, method: :get do %>
       <%= text_field_tag :query,
         params[:query],
@@ -10,5 +10,4 @@
         placeholder: "Find an event/T-Mate"  %>
       <% end %>
   </div>
-  <%= image_tag("icons/filter") %>
 </div>
