--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,10 +1,6 @@
-<%= render 'events/navbar' %>
-
-
+<%= render 'events/navbar_index' %>
 
 <%= render 'events/card_event' , event:@events.first %>
-
-
 
 <%= render 'events/footer' %>
 
