--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,6 +10,11 @@
     </div>
   </div>
 
+  <h3><%= @event.title %></h3>
+  <div class="d-flex flex-row align-items" id="weather-fc">
+    <!-- let this space blank -->
+  </div>
+
   <div id="map"
      style="width: 350px; height: 250px;"
      data-markers="<%= @markers.to_json %>"
@@ -17,17 +22,9 @@
   </div>
 
   <div>
-    <h3><%= @event.title %></h3>
     <p class="text-justify"><%= @event.content %></p>
   </div>
   <HR size=50 width=200px>
-  <div id="weather-forecast">
-    <h3>Weather Forecast</h3>
-  </div>
-  <div class="d-flex flex-row justify-content-around" id="weather-fc">
-    <!-- let this space blank -->
-  </div>
-  <HR size=0 width=200px>
     <% #if current_user != nil && current_user.teammates.count > 0 %>
       <h3>T-Mates</h3>
       <div>
