--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,18 +2,18 @@
   <div class="d-flex flex-row event-show-header">
     <%= image_tag "avatar/default.png", class:"avatar-creator" %>
     <div class="d-flex flex-column">
-      <h3><%= "#{@event.creator.first_name} #{@event.creator.last_name}" %></h2>
+      <h3 class="namelast_name"><%= "#{@event.creator.first_name} #{@event.creator.last_name}" %></h3>
+
+      <div class="d-flex flex-row" id="date-and-time">
+        <p><i class="fas fa-calendar-alt"></i> <%= @event.start_time.strftime("%e %B, %Y") %></p>
+        <p><i class="far fa-clock ml-2"></i> <%= "#{@event.start_time.strftime("%k:%m")} to #{@event.end_time.strftime("%k:%m")}"%></p>
+      </div>
     </div>
   </div>
 
-  <h3><%= @event.title %></h3>
+  <h3 class="mt-3"><%= @event.title %></h3>
 
-  <div class="d-flex flex-row justify-content-between" id="date-and-time">
-    <p><i class="fas fa-calendar-alt"></i> <%= @event.start_time.strftime("%e %B, %Y") %></p>
-    <p><i class="far fa-clock"></i> <%= "#{@event.start_time.strftime("%k:%m")} to #{@event.end_time.strftime("%k:%m")}"%></p>
-  </div>
-
-  <div class="d-flex flex-row align-items" id="weather-fc">
+  <div class="d-flex flex-row align-items mt-n1" id="weather-fc">
     <!-- let this space blank -->
   </div>
 
