--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <h3 class="mt-3"><%= @event.title %></h3>
+  <h3 class="mt-3" style="margin-left: 5px;"><%= @event.title %></h3>
 
   <div class="d-flex flex-row align-items mt-n1" id="weather-fc">
     <!-- let this space blank -->
