--- a/app/views/users/_card_user.html.erb
+++ b/app/views/users/_card_user.html.erb
@@ -1,5 +1,5 @@
 <div class="card-user d-flex flex-row justify-content-between align-items-center">
-  <%= image_tag "avatar/default.png", class:"avatar-card-user mr-1" %>
+  <%= cl_image_tag user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"avatar-card-user" %>
   <div class="m-0 d-flex flex-column justify-content-between align-items-start" >
     <h3><%= "#{user.first_name}" %></h3>
     <p><%= user.common_teammates %><p>
