fixed seed, added a quick n dirty index of user

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,7 @@
 <%= render 'events/navbar_index' %>
-
-<%= render 'events/card_event' , event:@events.first %>
+<% Event.all.each do |event|%>
+<%= render 'events/card_event' , event:event %>
+<% end %>
 
 <%= render 'events/footer' %>
 
