--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,14 @@
   </head>
 
   <body>
+    <% if true %>
+      <%= render 'events/navbar_index' %>
+    <% else %>
+      <%= render 'events/navbar_index' %>
+    <% end %>
+
     <%= yield %>
+
+    <%= render 'events/footer' %>
   </body>
 </html>
