--- a/app/views/layouts/layout_index.html.erb
+++ b/app/views/layouts/layout_index.html.erb
@@ -13,10 +13,10 @@
   </head>
 
   <body>
-    <%= render 'events/navbar_all_but_index' %>
+    <%= render 'events/navbar_index' %>
 
     <%= yield %>
-    <div class="footer-size"></div>
+    <div class="footer-size">
     <%= render 'events/footer' %>
   </body>
 </html>
