--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,42 @@
-// Specific CSS for your home-page
+.bg-img{
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: image-url("background.jpg");
+  background-position: center;
+}
+
+.title{
+  display: flex;
+  justify-content: center;
+  margin-left: 100px;
+  padding-top: 65px;
+  color: white;
+}
+
+.buttons-home{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  margin-top: 430px;
+}
+
+#btn-login{
+  padding: 10px 40px;
+  color: #00498e;
+  text-align: center;
+  background: rgba(255, 255, 255, 1);
+  opacity: 1;
+  margin-bottom: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  border-radius: 3px;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+}
+
+#btn-signup{
+  color: white;
+}
