--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="bg-img">
+  <div class="title">
+    <h1>OpenLake</h1>
+  </div>
+  <div class="buttons-home">
+    <%= link_to "Log in", user_session_path, id: "btn-login" %>
+    <%= link_to "Sign up", new_user_registration_path, id: "btn-signup" %>
+  </div>
+</div>
+
