index of event, empty layout

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,5 @@
-<% Event.all.each do |event|%>
+<% @events.each do |event| %>
+<div class="mb-1">
 <%= render 'events/card_event' , event:event %>
+</div>
 <% end %>
