--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,15 +1,36 @@
 <%= render 'events/navbar_all_but_index' %>
 <div class="create-main-container">
   <h3>Create Your Event</h3>
+  <%= simple_form_for @event do |f| %>
 
-  <h6><strong>Select a Category :</strong></h6>
+    <h6><strong>Select a Category :</strong></h6>
 
-  <div class="categories">
-    <% Category.all.each do |category| %>
-      <i class="fas <%= category.logo_link %>"></i>
-    <% end %>
-  </div>
+    <div class="categories">
+      <% Category.all.each do |category| %>
+        <i class="fas <%= category.logo_link %>"></i>
+      <% end %>
+    </div>
 
-  <h6><strong>Give a Title for your Category :</strong></h6>
+    <h6><strong>Give a Title to your Event :</strong></h6>
+      <%= f.input :title, label: false, placeholder: "e.g. Football 5v5"%>
+
+    <h6><strong>Give a Description to your Event :</strong></h6>
+      <%= f.input :content, label: false, placeholder: "e.g. Five VS five footballs in the new pitch of Lutry"%>
+
+    <h6><strong>How many Participants will it have max ?</strong></h6>
+      <%= f.input :participants_maximum, label: false%>
+
+    <h6><strong>Indicate when your Event will Start: </strong></h6>
+      <%= f.input :start_time, as: :datetime, html5: true, label: false%>
+
+    <h6><strong>Indicate when your Event will End: </strong></h6>
+      <%= f.input :end_time, as: :datetime, html5: true, label: false%>
+
+    <h6><strong>Now Tell Us where it will Take Place: </strong></h6>
+      <%= f.input :address, label: false%>
+
+
+      <%= f.submit "Submit!", class: 'btn-submit' %>
+  <% end %>
 
 </div>
