index done, link added to card, not working

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,7 @@
 <% @events.each do |event| %>
-<div class="mb-1">
-<%= render 'events/card_event' , event:event %>
-</div>
+<a class="text-reset" href="#">
+  <div class="mb-1">
+    <%= render 'events/card_event' , event:event %>
+  </div>
+</a>
 <% end %>
