--- a/app/assets/stylesheets/components/_card_user.scss
+++ b/app/assets/stylesheets/components/_card_user.scss
@@ -1,8 +1,11 @@
 .card-user {
-  width: 350px;
+  width: 375px;
   height: 130px;
   background-color: white;
   padding: 5px;
+  padding-left: 10px;
+  padding-top: 25px;
+  position:relative;
   h3 {
     font-weight: bold;
     font-size: 18px;
@@ -11,6 +14,11 @@
   p {
     margin: 0;
     font-size:12px;
+  }
+  .button {
+    position: absolute;
+    top: 40px;
+    right: 20px;
   }
 }
 
