fixed login layout

--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -2,8 +2,5 @@
   background-image: url("https://source.unsplash.com/TsqwC3G63zQ/1600x900");
   background-size: cover;
   background-position: center;
-
-  img {
-    height: 600px;
-  }
+  height: 100vh;
 }
