--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,36 +1,44 @@
-<%= render 'events/navbar_all_but_index' %>
 <div class="create-main-container">
-  <h3>Create Your Event</h3>
+  <h2>Create Your Event</h2>
   <%= simple_form_for @event do |f| %>
 
     <h6><strong>Select a Category :</strong></h6>
 
+
     <div class="categories">
-      <% Category.all.each do |category| %>
-        <i class="fas <%= category.logo_link %>"></i>
-      <% end %>
+      <div class="first-row-categories">
+        <i class="fas <%= Category.first.logo_link %>"></i>
+        <i class="fas <%= Category.second.logo_link %>"></i>
+        <i class="fas <%= Category.third.logo_link %>"></i>
+      </div>
+      <div class="second-row-categories">
+        <i class="fas <%= Category.fourth.logo_link %>"></i>
+        <i class="fas <%= Category.fifth.logo_link %>"></i>
+        <i class="fas <%= Category.last.logo_link %>"></i>
+      </div>
     </div>
 
-    <h6><strong>Give a Title to your Event :</strong></h6>
-      <%= f.input :title, label: false, placeholder: "e.g. Football 5v5"%>
+    <h6><strong>Event Title:</strong></h6>
+      <%= f.input :title, label: false%>
 
-    <h6><strong>Give a Description to your Event :</strong></h6>
-      <%= f.input :content, label: false, placeholder: "e.g. Five VS five footballs in the new pitch of Lutry"%>
+    <h6><strong>Event Description:</strong></h6>
+      <%= f.input :content, label: false%>
 
-    <h6><strong>How many Participants will it have max ?</strong></h6>
-      <%= f.input :participants_maximum, label: false%>
-
-    <h6><strong>Indicate when your Event will Start: </strong></h6>
-      <%= f.input :start_time, as: :datetime, html5: true, label: false%>
-
-    <h6><strong>Indicate when your Event will End: </strong></h6>
-      <%= f.input :end_time, as: :datetime, html5: true, label: false%>
-
-    <h6><strong>Now Tell Us where it will Take Place: </strong></h6>
+    <h6><strong>Event Location:</strong></h6>
       <%= f.input :address, label: false%>
 
+    <h6><strong>Max Number of Participants:</strong></h6>
+      <%= f.input :participants_maximum, label: false %>
 
-      <%= f.submit "Submit!", class: 'btn-submit' %>
+    <h6><strong>Event Starts:</strong></h6>
+      <%= f.input :start_time, as: :datetime, html5: true, label: false%>
+
+    <h6><strong>Event Ends: </strong></h6>
+      <%= f.input :end_time, as: :datetime, html5: true, label: false%>
+
+    <div class="submit-button">
+      <%= f.submit "Create Event", class: 'btn-submit-event' %>
+    </div>
   <% end %>
 
 </div>
