--- a/app/views/events/_navbar_all_but_index.html.erb
+++ b/app/views/events/_navbar_all_but_index.html.erb
@@ -2,7 +2,7 @@
   <% if current_user.nil? %>
     <%= image_tag "avatar/default.png", class:"navbar-avatar" %>
   <% else %>
-    <%= cl_image_tag user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"navbar-avatar" %>
+    <%= cl_image_tag current_user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"navbar-avatar" %>
   <% end %>
   <div class="navbar-form-all-but-index">
     <%= form_tag events_path, method: :get do %>
