--- a/app/views/events/_footer.html.erb
+++ b/app/views/events/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class>
   <div class="footer footer-size">
-    <%= link_to image_tag("icons/home"), root_path %>
-    <%= link_to image_tag("icons/plus"), root_path %>
+    <%= link_to image_tag("icons/home"), events_path %>
+    <%= link_to image_tag("icons/plus"), new_event_path %>
     <%= link_to image_tag("icons/map"), root_path %>
   </div>
 </footer>
