--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
 <div>
-
   <div class="d-flex flex-row justify-content-between align-items-center mb-3 p-3">
     <%= cl_image_tag @user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"avatar-profile" %>
     <div class="d-flex flex-column align-items-center justify-content-center"><p class="font-weight-bold mb-0 profile-number"><%= @user.teammates.count %></p><p class="mb-0">T-Mates</p></div>
@@ -34,7 +33,9 @@
     <div>
       <% @upcoming_events.each do |event| %>
         <div class="mb-1">
-          <%= render "events/card_event", event:event %>
+          <a href="<%= event_path(event) %>" class="text-reset">
+            <%= render "events/card_event", event:event %>
+          </a>
         </div>
       <% end %>
     </div>
