--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -41,7 +41,7 @@
     <% if current_user != nil && (@event.users.include? current_user || @event.creator == current_user) %>
       <%= link_to 'Cancel attendance!', events_path, class: 'text-center text-reset align-middle', id: 'btn-cancel' %>
     <% else %>
-      <%= link_to 'Attend this event!', user_path(@user), class: 'text-center text-reset align-middle', id: 'btn-attend'  %>
+      <%= link_to 'Attend this event!', event_attendances_path(@event), method: :post, class: 'text-center text-reset align-middle', id: 'btn-attend'  %>
     <% end %>
   </div>
 </div>
