added link to create (POST) in event show, create method in attendance controller

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -43,7 +43,7 @@
   <br>
   <div class="text-center">
     <% if current_user != nil && (@event.users.include? current_user || @event.creator == current_user) %>
-      <%= link_to 'Cancel attendance!', events_path, class: 'text-center text-reset align-middle', id: 'btn-cancel' %>
+      <%= link_to 'Cancel attendance!', event_attendances_path(@event), method: :post, class: 'text-center text-reset align-middle', id: 'btn-cancel' %>
     <% else %>
       <%= link_to 'Attend this event!', event_attendances_path(@event), method: :post, class: 'text-center text-reset align-middle', id: 'btn-attend'  %>
     <% end %>
