--- a/app/views/users/_card_user.html.erb
+++ b/app/views/users/_card_user.html.erb
@@ -1,5 +1,5 @@
 <div class="card-user">
-  <a href="<%= users_path(user) %>"> 
+  <a href="<%= user_path(user) %>"> 
     <div class="d-flex flex-row justify-content-start align-items-center">
       <%= cl_image_tag user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"avatar-card-user" %>
       <div class="m-0 ml-3 d-flex flex-column justify-content-between align-items-start" >
