--- a/app/assets/stylesheets/pages/_new_event.scss
+++ b/app/assets/stylesheets/pages/_new_event.scss
@@ -7,8 +7,8 @@ body {
 }
 
 .create-main-container h6 {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 25px;
+  margin-bottom: 12px;
 }
 
 .first-row-categories {
@@ -30,9 +30,7 @@ body {
   margin-top: 10px;
   border-radius: 6px;
   background-color: #3581dd;
-  border-color: #2d6eb7;
   color: white;
-  font-weight: 10px;
   width: 170px;
   height: 40px;
   font-size: 20px;
@@ -42,3 +40,86 @@ body {
 .submit-button {
   text-align: center;
 }
+
+
+// Slections of category
+.category-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.category-item {
+  flex: 0 0 30%;
+}
+
+.category-selector {
+  position: absolute;
+  transform: scale(0);
+}
+
+.category-selector + label {
+  display: block;
+  cursor: pointer;
+  box-sizing: border-box;
+  width: 100%;
+  font-size: 12px;
+  text-align: left;
+  padding: 10px 10px 30px 10px;
+  border: 1px solid #EAEAEA;
+  border-radius: 4px;
+  background-color: white;
+  text-align: center;
+}
+
+.category-selector:checked + label {
+  color: red !important;
+}
+
+
+#snippet_category_ruby + label {
+  color: #FD1015;
+}
+
+#snippet_category_ruby:checked + label {
+  background-color: #FD1015;
+  border-color: #FD1015;
+}
+
+
+#snippet_category_javascript + label {
+  color: #FFC65A;
+}
+
+#snippet_category_javascript:checked + label {
+  background-color: #FFC65A;
+  border-color: #FFC65A;
+}
+
+
+#snippet_category_css + label {
+  color: #62DDF5;
+}
+
+#snippet_category_css:checked + label {
+  background-color: #62DDF5;
+  border-color: #62DDF5;
+}
+
+#event_category_1 {
+  background-color: green;
+}
+
+#event_category_2 {
+  background-color: green;
+}
+
+// label[for=event_category_2]:before {
+//   content: "\f1e3";
+//   font-family: FontAwesome;
+//   position:absolute;
+//   font-size: 30px;
+// }
+
+
+
