--- a/app/assets/stylesheets/components/_event_card.scss
+++ b/app/assets/stylesheets/components/_event_card.scss
@@ -7,12 +7,20 @@
   border-bottom: 1px solid #eae8e8;
   background-color: white;
   box-shadow: 0 0 8px rgba(0,0,0,0.2);
+  position: relative;
 
   i {
     display: flex;
     align-items: center;
     margin: 0px 10px;
     margin-right: 15px  ;
+  }
+
+  #fist_raised {
+    margin-top: 8px;
+    position: absolute;
+    top: 3px;
+    left: 335px;
   }
 }
 
@@ -34,15 +42,29 @@
   .div-icon {
     height: 90px;
     width: 90px;
-    margin-left: 10px;
-    margin-right: 10px;
   }
 
   .fa-biking {
-    font-size: 70px;
+    font-size: 50px;
   }
 
   .fa-swimmer {
+    font-size: 50px;
+  }
+
+  .fa-bowling-ball {
+    font-size: 60px;
+  }
+
+  .fa-futbol {
+    font-size: 60px;
+  }
+
+  .fa-running {
+    font-size: 60px;
+  }
+
+  .fa-volleyball-ball {
     font-size: 60px;
   }
 }
@@ -50,26 +72,17 @@
 .card-time {
   display: flex ;
   justify-content: space-between;
-  font-size: 20px;
+  font-size: 10px;
   width: 100%;
   padding-bottom: 10px;
   margin-top: 5px;
-
-  img {
-    margin: 0px;
-  }
 }
 
 #event-title {
   display: flex;
   justify-content: space-between;
-  font-size: 23px;
+  font-size: 20px;
   font-weight: bold;
-
-  #fist_raised {
-    margin-top: 8px;
-  }
-
 }
 
 #event-creator {
@@ -79,16 +92,33 @@
 
 .card-elements {
   display: flex;
-  align-items: center;
-  font-size: 17px;
+  flex-direction: column;
+  font-size: 13px;
+  margin-top: 5px;
+  background-color: #edefff;
+  width: 115px;
+  border-radius: 5px;
 
   #clock {
     margin-right: 10px;
   }
 
+  #calendar {
+    margin-right: 10px;
+  }
 }
 
 .card-distance {
-  font-size: 16px;
+  position: absolute;
+  top: 85px;
+  left: 240px;
+  display: flex;
+  font-size: 15px;
   margin-left: 50px;
+  width: 90px;
+
+  img {
+    margin-top: 4px;
+    margin-right: 4px;
+  }
 }
