--- a/app/views/events/_navbar_all_but_index.html.erb
+++ b/app/views/events/_navbar_all_but_index.html.erb
@@ -2,8 +2,8 @@
   <% if current_user.nil? %>
     <%= image_tag "avatar/default.png", class:"navbar-avatar" %>
   <% else %>
-    <a href="<%= logged_user_path %>">>
-      <%= cl_image_tag current_user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"navbar-avatar" %>
+    <a href="<%= logged_user_path %>">
+      <%= cl_image_tag current_user.photo.key, crop: :crop, gravity: :face, id: "navbar-avatar" %>
     </a>
   <% end %>
   <div class="navbar-form-all-but-index">
