--- a/app/assets/stylesheets/pages/_new_event.scss
+++ b/app/assets/stylesheets/pages/_new_event.scss
@@ -13,14 +13,15 @@ body {
 
 .btn-submit-event {
   margin-top: 10px;
-  border-radius: 6px;
-  background-color: #3581dd;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  background-color: #78d381;
   color: white;
   width: 170px;
   height: 40px;
+  font-weight: bold;
   font-size: 20px;
-  box-shadow: 0 0 10px rgba(0,103,216,0.2);
-
+  box-shadow: 0 0 8px rgba(0,0,0,0.3);
 }
 
 .submit-button {
@@ -46,16 +47,17 @@ body {
     position:absolute;
     visibility: hidden;
   }
-  
+
   .fa-swimmer {
     font-size: 55px;
   }
 }
 
 input[type="radio"]:checked ~ * {
-  border-radius: 5px;
-  border-color: blue;
-  border-width: 2px;
+  border-radius: 40%;
+  background-color: #f2efef;
+  padding: 2px;
+  border-width: 3px;
   border-style: solid;
 }
 
