--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,6 +7,10 @@
   background-color: #4867AA;
   border-bottom: 1px solid #dddddd;
   margin-bottom: 5px;
+  position: sticky;
+  top: 0px;
+  z-index: 5;
+
     img {
       width: 40px;
       height: 40px; 
