changed bottom button of the show events

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,7 +42,7 @@
       <hr>
     <% end %>
   <br>
-  <div class="text-center">
+  <div class="text-center mb-4">
     <% if current_user != nil && (@event.users.include? current_user || @event.creator == current_user) %>
       <%= link_to 'Cancel attendance!', event_attendances_path(@event), method: :post, class: 'text-center text-reset align-middle', id: 'btn-cancel' %>
     <% else %>
