modifed button of the create event

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -30,7 +30,7 @@
     <h6><strong>Event Ends: </strong></h6>
       <%= f.input :end_time, as: :datetime, html5: true, label: false%>
 
-    <div class="submit-button">
+    <div class="submit-button mb-4">
       <%= f.submit "Create Event!", class: 'btn-submit-event' %>
     </div>
   <% end %>
