--- a/app/assets/stylesheets/pages/_new_event.scss
+++ b/app/assets/stylesheets/pages/_new_event.scss
@@ -16,11 +16,13 @@ body {
   margin-bottom: 5px;
   border-radius: 5px;
   background-color: #78d381;
-  color: white;
+  color: black;
   width: 170px;
   height: 40px;
   font-weight: bold;
   font-size: 20px;
+  border-color: #78d381;
+  border-width: 0px;
   box-shadow: 0 0 8px rgba(0,0,0,0.3);
 }
 
