added sign out button to navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,6 +15,11 @@
       width: 40px;
       height: 40px; 
   }
+  i {
+    font-size: 30px;
+    color: black;
+    margin-right: 10px;
+  }
 }
 
 #navbar-avatar {
@@ -32,6 +37,6 @@
 }
 
 .navbar-form-all-but-index {
-  width: 290px;
+  width: 260px;
   margin-right: 5px;
 }
