--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -1,6 +1,8 @@
 <div class="navbar-index">
   <% if current_user.nil? %>
-  <%= image_tag "avatar/default.png", class:"navbar-avatar" %>
+    <a href="<%= new_user_session_path %>">
+      <%= image_tag "avatar/default.png", class:"navbar-avatar" %>
+    </a>
   <% else %>
     <a href="<%= logged_user_path %>">
       <%= cl_image_tag current_user.photo.key, crop: :crop, gravity: :face, id: "navbar-avatar" %>
