back arrow added in navbar except index

--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -15,5 +15,6 @@
       <% end %>
 
   </div id= "filter-icon">
-    <%= image_tag("icons/filter") %>
-</div>
+    <%= image_tag("icons/filter.svg") %>
+  </div>
+
