fixed login button

--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -15,8 +15,7 @@
         class: "form-control",
         placeholder: "Find an event/T-Mate"  %>
       <% end %>
-
-  </div id= "filter-icon">
+  </div class='filter-icon'>
     <%= image_tag("icons/filter.svg") %>
   </div>
-
+</div>
