--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,17 +25,17 @@
   <% if current_user.nil? || current_user != @user %>
     <div class="d-flex flex-row justify-content-around align-items-center mb-3">
         <h3 class="m-0">Events Created</h3>
-        <%= render "reviews/rating", rating: @rating %>
-      </div>
-    <% @user.created_events.each do |event| %>
-      <div>
-        <% if event.end_time <= Time.now %>
-            <div class="mb-1">
-              <a href="<%= event_path(event) %>" class="text-reset">
-                <%= render "events/card_event", event:event %>
-              </a>
-            </div>
+        <% unless @rating.negative? %>
+          <%= render "reviews/rating", rating: @rating %>
         <% end %>
+      </div>
+    <% @past_events.each do |event| %>
+      <div>
+          <div class="mb-1">
+            <a href="<%= event_path(event) %>" class="text-reset">
+              <%= render "events/card_event", event:event %>
+            </a>
+          </div>
       </div>
     <% end %>
   <% else %>
