fixed the issue of the navabars

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,11 +6,11 @@
   background-color: #4867AA;
   position: fixed;
   left: 0;
-  top: 612px;
+  top: calc(100vh - 55px);
   height: 55px;
   width: 375px;
   overflow: hidden;
-  
+
 
   img {
     width: 40px;
