add margin under upcoming events

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
       </div>
     <% end %>
   <% else %>
-      <h3 class="m-0">Upcoming Events</h3>
+      <h3 class="mb-3">Upcoming Events</h3>
     <div>
       <% @upcoming_events.each do |event| %>
         <div class="mb-1">
