fixed units of measure in card events

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,7 +8,7 @@
   left: 0;
   top: calc(100vh - 55px);
   height: 55px;
-  width: 375px;
+  width: 100%;
   overflow: hidden;
 
 
@@ -20,7 +20,7 @@
 
 .footer-size {
   height: 55px;
-  width: 375px;
+  width: 100%;
 }
 
 
