--- a/app/assets/stylesheets/components/_event_card.scss
+++ b/app/assets/stylesheets/components/_event_card.scss
@@ -1,7 +1,7 @@
   .card-container  {
   display: flex;
   justify-content: space-between;
-  width: 375px;
+  width: 100%;
   height: 120px;
   border-top: 1px solid #eae8e8 ;
   border-bottom: 1px solid #eae8e8;
@@ -20,7 +20,7 @@
     margin-top: 8px;
     position: absolute;
     top: 3px;
-    left: 335px;
+    right: 20px;
   }
 }
 
@@ -109,7 +109,7 @@
 .card-distance {
   position: absolute;
   top: 85px;
-  left: 240px;
+  right: 20px;
   display: flex;
   font-size: 15px;
   margin-left: 50px;
