--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 375px;
+  width: 100%;
   height: 65px;
   background-color: #4867AA;
   border-bottom: 1px solid #dddddd;
