--- a/app/assets/stylesheets/components/_event_card.scss
+++ b/app/assets/stylesheets/components/_event_card.scss
@@ -1,12 +1,14 @@
   .card-container  {
   display: flex;
   justify-content: space-between;
-  width: 375px;
+  margin: 13px auto;
+  width: 94%;
+  border-radius: 3px;
   height: 120px;
   border-top: 1px solid #eae8e8 ;
   border-bottom: 1px solid #eae8e8;
   background-color: white;
-  box-shadow: 0 0 8px rgba(0,0,0,0.2);
+  box-shadow: 0 0 8px rgba(0,0,0,0.08);
   position: relative;
 
   i {
@@ -19,8 +21,8 @@
   #fist_raised {
     margin-top: 8px;
     position: absolute;
-    top: 3px;
-    left: 335px;
+    top: 4px;
+    right: 9px;
   }
 }
 
@@ -28,7 +30,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 10px;
+  margin-left: 7px;
 }
 
 .card-global {
@@ -81,7 +83,7 @@
 #event-title {
   display: flex;
   justify-content: space-between;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -107,12 +109,11 @@
 }
 
 .card-distance {
-  position: absolute;
-  top: 85px;
-  left: 240px;
-  display: flex;
-  font-size: 15px;
-  margin-left: 50px;
+    position: absolute;
+    top: 85px;
+    right: 9px;
+    display: flex;
+    font-size: 15px;
 
   img {
     margin-top: 4px;
