changed color through variable

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-around;
   color: rgba(0,0,0,0.3);
-  background-color: #4867AA;
+  background-color: $primary-color;
   position: fixed;
   left: 0;
   top: calc(100vh - 55px);
