--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,7 +4,7 @@
   justify-content: space-around;
   width: 100%;
   height: 65px;
-  background-color: #4867AA;
+  background-color: $primary-color;
   border-bottom: 1px solid #dddddd;
   margin-bottom: 5px;
   position: sticky;
