--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -19,10 +19,10 @@
       <%= f.input :content, label: false%>
 
     <h6><strong>Event Location:</strong></h6>
-      <%= f.input :address, label: false%>
+      <%= f.input :address, label: false, id: "flat_address", class: "algolia-form" %>
 
     <h6><strong>Max Number of Participants:</strong></h6>
-      <%= f.input :participants_maximum, label: false %>
+      <%= f.input :participants_maximum, label: false%>
 
     <h6><strong>Event Starts:</strong></h6>
       <%= f.input :start_time, as: :datetime, html5: true, label: false%>
