--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -28,13 +28,14 @@
 
 #btn-login{
   padding: 10px 40px;
-  color: #00498e;
+  color: $primary-color;
   text-align: center;
   background: rgba(255, 255, 255, 1);
   opacity: 1;
   margin-bottom: 10px;
   font-size: 24px;
   font-weight: bold;
+  border: 1px $primary-color solid;
   border-radius: 3px;
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
 }
