--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -51,9 +51,9 @@
   <br>
   <div class="text-center mb-4">
     <% if current_user != nil && (@event.users.include? current_user || @event.creator == current_user) %>
-      <%= link_to 'Cancel attendance!', event_attendances_path(@event), method: :post, class: 'text-center text-reset align-middle', id: 'btn-cancel' %>
+      <%= link_to 'Cancel attendance', event_attendances_path(@event), method: :post, class: 'text-center text-reset align-middle', id: 'btn-cancel' %>
     <% else %>
-      <%= link_to 'Attend this event!', event_attendances_path(@event), method: :post, class: 'text-center text-reset align-middle', id: 'btn-attend'  %>
+      <%= link_to 'Attend this event', event_attendances_path(@event), method: :post, class: 'text-center text-reset align-middle', id: 'btn-attend'  %>
     <% end %>
   </div>
 </div>
