created clean-up method

--- a/app/views/teammate_links/test.html.erb
+++ b/app/views/teammate_links/test.html.erb
@@ -1,1 +1,1 @@
-<%= link_to  "pending user 4", create_teammate_link_path(User.find(4), "pending") %>
+<%= link_to  "pending user 4", pending_teammate_link_path(User.find(4)), method: :POST %>
