replaced placeholder text in search bar

--- a/app/views/events/_navbar_all_but_index.html.erb
+++ b/app/views/events/_navbar_all_but_index.html.erb
@@ -9,7 +9,7 @@
       <%= text_field_tag :query,
         params[:query],
         class: "form-control",
-        placeholder: "Find an event/T-Mate"  %>
+        placeholder: "Find a T-Mate"  %>
       <% end %>
   </div>
   <%= link_to destroy_user_session_path, method: :delete do %>
