--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -13,7 +13,7 @@
       <%= text_field_tag :query,
         params[:query],
         class: "form-control",
-        placeholder: "Find an event/T-Mate"  %>
+        placeholder: "Find a T-Mate"  %>
       <% end %>
   </div class='filter-icon'>
     <%= image_tag("icons/filter.svg") %>
