--- a/app/views/users/pending_teammates.html.erb
+++ b/app/views/users/pending_teammates.html.erb
@@ -1,3 +1,3 @@
-<% @pending-tmates.each do |tmate| %>
+<% @pending_tmates.each do |tmate| %>
 <%= render "users/card_user", user:tmate %>
 <% end %>
